--- a/419_Lab02/.classpath
+++ b/419_Lab02/.classpath
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/hadoop"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="C:/Users/IBM_ADMIN/Documents/GitHub/IASTATE/419_hadoop-2.4.1/lib/hadoop-annotations-2.4.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/IBM_ADMIN/Documents/GitHub/IASTATE/419_hadoop-2.4.1/lib/hadoop-common-2.4.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/IBM_ADMIN/Documents/GitHub/IASTATE/419_hadoop-2.4.1/lib/hadoop-mapreduce-client-core-2.4.1.jar"/>
