419 - lab2 progress at end of lab time

--- a/419_Lab02/build.xml
+++ b/419_Lab02/build.xml
@@ -5,7 +5,7 @@
 	
 <target name="main" >
 	<mkdir dir="${basedir}/out"/>
-	<jar destfile="${basedir}/out/Lab02.jar" basedir="${basedir}/bin" update="true"/>
+	<jar destfile="${basedir}/out/WordCount.jar" basedir="${basedir}/bin" update="true"/>
 </target>
   
 </project>
