--- a/419_Lab01/.classpath
+++ b/419_Lab01/.classpath
@@ -2,9 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/hadoop"/>
-	<classpathentry kind="lib" path="C:/Users/IBM_ADMIN/Documents/GitHub/IASTATE/419_hadoop-2.4.1/lib/hadoop-annotations-2.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/IBM_ADMIN/Documents/GitHub/IASTATE/419_hadoop-2.4.1/lib/hadoop-common-2.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/IBM_ADMIN/Documents/GitHub/IASTATE/419_hadoop-2.4.1/lib/hadoop-mapreduce-client-core-2.4.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/hadoop-2.4.1"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
