554 - most of part 2

--- a/554_Project01/Makefile
+++ b/554_Project01/Makefile
@@ -1,8 +1,16 @@
-all : EchoServer EchoClient
+all : EchoServer EchoClient RPCServer RPCClient
 
-EchoServer : EchoServer.c  UDPCommon.c UDPCommon.h Project1Types.h
-	gcc -o EchoServer EchoServer.c UDPCommon.c UDPCommon.h Project1Types.h
+ECHODEPS = UDPCommon.c UDPCommon.h Project1Types.h
+RPCDEPS  = UDPCommon.h Project1Types.h RPCCommon.h ArithmeticService.h UDPCommon.c RPCCommon.c ArithmeticService.c
+
+EchoServer : EchoServer.c  $(ECHODEPS)
+	gcc -o EchoServer EchoServer.c $(ECHODEPS)
 	
-EchoClient : EchoClient.c  UDPCommon.c UDPCommon.h Project1Types.h
-	gcc -o EchoClient EchoClient.c UDPCommon.c UDPCommon.h Project1Types.h
+EchoClient : EchoClient.c  $(ECHODEPS)
+	gcc -o EchoClient EchoClient.c $(ECHODEPS)
 
+RPCServer : RPCServer.c  $(RPCDEPS)
+	gcc -o RPCServer  RPCServer.c  $(RPCDEPS)
+
+RPCClient : RPCClient.c  $(RPCDEPS)
+	gcc -o RPCClient  RPCClient.c  $(RPCDEPS)
