--- a/419_Lab07/.classpath
+++ b/419_Lab07/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/hadoop-2.4.1"/>
+	<classpathentry kind="lib" path="orig/pig-0.14.0-SNAPSHOT-core-h2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
